# python-practice

./: .dockerignore  .gitignore  Dockerfile  README.md  cal.py  celerybeat-schedule.bak  celerybeat-schedule.dir  docker-compose.yml  main.py  nginx.conf  package-lock.json  package.json  pyproject.toml  requirement.txt  requirements.txt  tailwind.config.js  test_token.py
.ebextensions/: 01-packages.config  02-django.config
APScheduler/: main.py
Django-Wysiwyg/: .gitignore  requirements.txt
DjangoAirbnb-2022/: db.sqlite3  pyproject.toml
accounts/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
accounts_profile/: apps.py  decorators.py  forms.py  views.py
ai-math-Practice/: LaTex(레이텍, 라텍).ipynb  Numpy_Base.ipynb  Untitled.ipynb  matplotlib.ipynb  내적.ipynb  단위행렬.ipynb  삼각함수.ipynb  스칼라, 벡터, 텐서.ipynb  전치, 행렬곱.ipynb  절대값(abs).ipynb  제곱, 제곱근, 다항함수.ipynb  총합, 총곱.ipynb  행렬식, 역행렬.ipynb  행렬의 곱.ipynb
app/: tasks.py
article/: decorators.py  forms.py  models.py  urls.py  views.py
backend/: .dockerignore  .gitignore  Dockerfile  blog_api.http  insta_api.db  main.py  requirements.txt  settings.py  storages.py  urls.py
base/: serializers.py  urls.py  views.py
cart/: cart.py  views.py
carts/: admin.py  models.py  urls.py  views.py
category/: context_processors.py  models.py
comment/: decorators.py  forms.py  urls.py  views.py
config/: settings.py  urls.py  views.py
conversations/: views.py
core/: settings.py  urls.py
coupon/: models.py  urls.py
crypto_proj/: asgi.py  celery.py  settings.py
delete/: .gitignore  pyproject.toml
delete/config/: settings.py  urls.py
django-airbnb-old/: .gitignore  .prettierignore  Dockerfile  gulpfile.js  tailwind.config.js
django-crypto/: requirements.txt
django-docker-tutorial/: docker-compose.yml
django-mongo-practice/: pyproject.toml
django-mongo-practice/books/: serializers.py  urls.py
django-mongo-practice/books/controllers/: author.py  book.py
django-mongo-practice/books/migrations/: 0001_initial.py
django-mongo-practice/books/models/: __init__.py  author.py  book.py
django-mongo-practice/books/services/: author_service.py  book_service.py
django-mongo-practice/config/: settings.py  urls.py
django-onlineshop/: .gitignore  manage.py
django-pinterest/: .gitignore  Dockerfile  requirements.txt
drf-instagram/: README.md
drf-react-instaclone/: .gitignore  README.md
drf-react-shop-demo/: .gitignore  db.sqlite3  requirements.txt
drf-react-simpleblog/: README.md
drf_token_project/: db.sqlite3  requirements.txt
fast-insta-sketch/: README.md
fast-mongo/: config.py  main.py  pyproject.toml
fast-mongo/database/: models.py
fast-mongo_motor_crud/: config.py  database.py  main.py  mock_data.py  pyproject.toml  schemas.py  services.py
fast-mongo_motor_crud/exceptions/: error_list.py  handler.py
fast-pymongo/: config.py  main.py
fast_api_facam/: log.txt  main.py  requirements.txt
fast_api_socket/: main.py
practice/: alarm.py  attr_practice.py  calculate_bmi.py  calculator.py  ceaser-cipher.py  chart_form_excel.py  converter.py  count_words.py  decorator_example.py  dictionary_results.txt  dir_size_viewer.py  email_validator.py  emotion_detector.py  encrypt_memo.py  enum_example.py  file_sorter.py  grammer_checker.py  hero_vs_monster.py  lotto_generator.py  memo.py  mini_sudoku_generator.py  ocr.py  ocr_module.py  open_cv_blur.py  page_image_downloader.py  password_aes.py  password_generate.py  password_util.py  pdf_merge.py  pdf_to_png.py  pomodoro.py  py_dictionary.py  pyproject.toml  qr_code.py  quiz_to_json.py  random_nickname.py  requirements.txt  rock_paper_scissors.py.py  simple_bank.py  simple_diary.py  (+19 more)
practice/daily_diary/: README.md  main.py  requirements.txt
practice/diffusers/: create_imgate_by_text.py
practice/file_renaming/: file_renamer.py
practice/garage/: README.md  api_server.py  cli.py  config.py  keyword_extractor.py  ocr.py  pdf_processor.py  pytest.ini  quotes.py  search_pdf.py
practice/garage/tests/: conftest.py  test_api.py  test_config.py  test_processor.py
practice/img_file_changer/: main.py
practice/make_zip/: example_usage.py  main.py
practice/pdf/: pdf_to_png.py
practice/resume_report/: example.txt  main.py
practice/text_cleaner/: example.txt  main.py
practice/vocab_quiz/: main.py  words.json
practice/youtube_download/: main.py
practice/youtube_to_mpc/: main.py
practice/누적시간계산기/: reduce_timer.py  time_log.txt
(+962 files in other folders)
