[tool.poetry]
name = "michael-shop"
version = "0.1.0"
description = ""
authors = ["Michael Youngchan CHO <michael.yc.cho@gmail.com>"]
readme = "README.md"
packages = [{include = "michael_shop"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
pillow = "^9.3.0"
django-cors-headers = "^3.13.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
gunicorn = "^20.1.0"
pyjwt = "^2.6.0"
psycopg2-binary = "^2.9.5"
requests = "^2.28.1"
python-decouple = "^3.6"
mysqlclient = "^2.1.1"
drf-yasg = "^1.21.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
