[tool.poetry]
name = "django-mongo-practice"
version = "0.1.0"
description = ""
authors = ["Michael Youngchan CHO <michael.yc.cho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djongo = "^1.3.6"
djangorestframework = "^3.15"
pymongo = "3.12.3"
pytz = "^2024.1"
dnspython = "^2.6.1"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
