[project]
name = "practice"
version = "0.1.0"
description = ""
authors = [
    {name = "youngchan-itall",email = "michael.yc.cho@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "py7zr (>=1.0.0,<2.0.0)",
    "diffusers (>=0.34.0,<0.35.0)",
    "torch (>=2.7.1,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "yt-dlp (>=2025.6.30,<2026.0.0)",
    "pymupdf (>=1.26.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
